--- a/script.css
+++ b/script.css
@@ -1,6 +1,5 @@
-h1 {
-  padding: 1em;
-  font-size: 3em;
+html {
+  scroll-behavior: smooth;
 }
 ul {
   display: flex;
@@ -9,7 +8,9 @@ ul {
 }
 li {
   margin: 0 3.5%;
-  padding: 2em;
+  padding: 1.2em;
+  list-style-type: none;
+  font-size: 0.7em;
 }
 .container {
   width: 90%;
@@ -26,9 +27,7 @@ li {
   border: none;
   cursor: pointer;
 }
-li {
-  list-style-type: none;
-}
+
 body {
   background-color: rgb(237, 250, 248);
   font-family: Arial, Helvetica, sans-serif;
@@ -43,7 +42,8 @@ header {
 
 header h1 {
   margin: 0;
-  font-size: 3em;
+  padding: 0.7em;
+  font-size: 2em;
   opacity: 0; /* Start as invisible */
   animation: fadeIn 2s forwards; /* Apply animation */
 }
