Added some more responsive h2 font size changes for different dimensions

--- a/script.css
+++ b/script.css
@@ -131,6 +131,17 @@ a:hover {
 /* width: 100%; /* Full width */
 /*  }
 }*/
+
+@media (max-width: 1112px) {
+  h2 {
+    font-size: 2.5em;
+  }
+}
+@media (max-width: 1000px) {
+  h2 {
+    font-size: 2.3em;
+  }
+}
 @media (max-width: 950px) {
   h2 {
     font-size: 2em;
