modified hr length

--- a/script.css
+++ b/script.css
@@ -139,6 +139,10 @@ header {
   padding: 10px 0;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
+hr {
+  display: center;
+  width: 80%;
+}
 
 /*Media query for mobile devices and smaller tabs*/
 
